syntax = "proto3";
option csharp_namespace = "OzonEdu.MerchandiseService.Grpc";
package MerchandiseService;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service MerchandiseServiceGrpc {
  rpc GetMerch (GetMerchItemsRequest) returns (GetMerchItemsResponse);
  rpc GetMerchIsIssued (GetMerchIsIssuedItemsRequest) returns (GetMerchIsIssuedItemsResponse);
}

message GetMerchItemsResponse 
{
  string name = 1;
}

message GetMerchIsIssuedItemsResponse 
{
  bool IsIssued = 1;
}

message GetMerchItemsRequest
{
}

message GetMerchIsIssuedItemsRequest
{
}